# app-ml4floods

./: .gitignore  Dockerfile  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: build.yaml
cwl-workflow/: app-ml4floods.cwl
src/app_ml4floods/: app.py  utils.py
src/app_ml4floods/models/WF2_unetv2_bgriswirs/: config.json
src/app_ml4floods/models/WF2_unetv2_rgbi/: config.json
